Fix fatjar not setting multi-release properly and breaking log4j on J11. Cleanup warnings.
(cherry picked from commit c61c33cfc1b52993c47bf306788f9ab1de953ed1)

--- a/build.gradle
+++ b/build.gradle
@@ -182,6 +182,7 @@ shadowJar {
     manifest {
         inheritFrom mlserviceJar.manifest
         attributes('Main-Class': 'net.minecraftforge.accesstransformer.TransformerProcessor')
+        attributes('Multi-Release': 'true')
     }
     dependencies {
         exclude(dependency {
@@ -198,6 +199,7 @@ task fatJar(type: ShadowJar) {
     manifest {
         inheritFrom mlserviceJar.manifest
         attributes('Main-Class': 'net.minecraftforge.accesstransformer.TransformerProcessor')
+        attributes('Multi-Release': 'true')
     }
     dependencies {
         exclude(dependency {
