--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,16 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-
 plugins {
-    id 'org.ajoberstar.grgit' version '4.0.2'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
-    id 'com.github.ben-manes.versions' version '0.27.0'
+    id 'org.ajoberstar.grgit' version '4.1.0'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'com.github.ben-manes.versions' version '0.36.0'
 }
 
 apply plugin: 'maven-publish'
 apply plugin: 'java-library'
 apply plugin: 'eclipse'
-apply plugin: 'jacoco'
 
 group 'net.minecraftforge'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-jacoco {
-    toolVersion = '0.8.2'
-}
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
 version = grgit.describe(longDescr: true).split('-').with { "${it[0]}.${it[1]}" }
 
@@ -39,9 +31,9 @@ test {
 }
 
 ext.antlr = [
-        grammarpackage: 'net.minecraftforge.accesstransformer.generated',
-        antlrSource: 'src/main/antlr4',
-        destinationDir: "src/generated-sources/java"
+	grammarpackage: 'net.minecraftforge.accesstransformer.generated',
+	antlrSource: 'src/main/antlr4',
+	destinationDir: "src/generated-sources/java"
 ]
 
 configurations {
@@ -76,7 +68,7 @@ clean {
     delete antlr.destinationDir
 }
 
-ext.sharedManifest = manifest {
+jar.manifest = manifest {
     attributes(['Specification-Title': 'accesstransformers',
                 'Specification-Vendor': 'forge',
                 'Specification-Version': '1', // Currently version 1 of the accesstransformer specification
@@ -123,45 +115,28 @@ repositories {
 }
 
 dependencies {
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.+')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
     testImplementation('org.powermock:powermock-core:2.0+')
     testImplementation('cpw.mods:modlauncher:6.1.+')
     testImplementation('com.google.code.gson:gson:2.8.6')
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.6.+')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.0')
     testRuntimeOnly(sourceSets.testJars.runtimeClasspath)
     implementation(sourceSets.antlr4.output)
-    implementation('org.antlr:antlr4-runtime:4.7.2')
+    implementation('org.antlr:antlr4-runtime:4.9.1')
     implementation('net.sf.jopt-simple:jopt-simple:5.0.4')
-    implementation('org.ow2.asm:asm:7.2')
-    implementation('org.ow2.asm:asm-commons:7.2')
-    implementation('org.ow2.asm:asm-tree:7.2')
+    implementation('org.ow2.asm:asm:9.0')
+    implementation('org.ow2.asm:asm-commons:9.0')
+    implementation('org.ow2.asm:asm-tree:9.0')
     implementation('org.apache.logging.log4j:log4j-api:2.11.+')
     implementation('org.apache.logging.log4j:log4j-core:2.11.+')
     implementation('cpw.mods:modlauncher:6.1.+:api')
     implementation('cpw.mods:modlauncher:6.1.+')
-    antlr4Compile('org.antlr:antlr4:4.7.2')
+    antlr4Compile('org.antlr:antlr4:4.9.1')
 }
 
 
-// Shadow Jar with antlr embedded
 shadowJar {
-    classifier 'shadowed'
-    from sourceSets.main.output
-    manifest {
-        inheritFrom jar.manifest
-        attributes('Main-Class': 'net.minecraftforge.accesstransformer.TransformerProcessor')
-    }
-    dependencies {
-        exclude(dependency {
-            it.moduleName != 'antlr4-runtime'
-        })
-    }
-}
-
-task fatJar(type: ShadowJar) {
-    archiveClassifier = 'fatjar'
-    from sourceSets.main.output
-    configurations = shadowJar.configurations
+    classifier 'fatjar'
     manifest {
         inheritFrom jar.manifest
         attributes('Main-Class': 'net.minecraftforge.accesstransformer.TransformerProcessor')
@@ -179,7 +154,6 @@ artifacts {
     archives sourcesJar
     archives testsJar
     archives shadowJar
-    archives fatJar
 }
 
 publishing {
@@ -188,7 +162,6 @@ publishing {
             from components.java
             artifact sourcesJar
             artifact shadowJar
-            artifact fatJar
             pom {
                 name = 'Access Transformers'
                 description = 'Transforms class member access based on specification files'
@@ -230,7 +203,7 @@ publishing {
                     username project.properties.forgeMavenUser
                     password project.properties.forgeMavenPassword
                 }
-                url 'http://files.minecraftforge.net/maven/manage/upload'
+                url 'https://files.minecraftforge.net/maven/manage/upload'
             } else {
                 url 'file://' + rootProject.file('repo').getAbsolutePath()
             }
