--- a/build.gradle
+++ b/build.gradle
@@ -127,10 +127,10 @@ dependencies {
     implementation('org.ow2.asm:asm:9.0')
     implementation('org.ow2.asm:asm-commons:9.0')
     implementation('org.ow2.asm:asm-tree:9.0')
-    implementation('org.apache.logging.log4j:log4j-api:2.11.+')
-    implementation('org.apache.logging.log4j:log4j-core:2.11.+')
-    implementation('cpw.mods:modlauncher:6.1.+:api')
-    implementation('cpw.mods:modlauncher:6.1.+')
+    implementation('org.apache.logging.log4j:log4j-api:2.11.2')
+    implementation('org.apache.logging.log4j:log4j-core:2.11.2')
+    implementation('cpw.mods:modlauncher:6.1.3:api')
+    implementation('cpw.mods:modlauncher:6.1.3')
     antlr4Compile('org.antlr:antlr4:4.9.1')
 }
 
@@ -161,7 +161,6 @@ publishing {
         mavenJava(MavenPublication) {
             from components.java
             artifact sourcesJar
-            artifact shadowJar
             pom {
                 name = 'Access Transformers'
                 description = 'Transforms class member access based on specification files'
